fixed broken image

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <button type="button" class="card-button">Sign up</button>
         </p></div>
     </div>
-        <img class="header-image" src="/home/bry/repos/odin-landing-page/images/abstract-header.jpg"> 
+        <img class="header-image" src="images/abstract-header.jpg"> 
     </div>
        
     
